# flake8-spellcheck

./: .flake8  .gitignore  .pre-commit-config.yaml  .spellcheck-allowlist  CHANGELOG.md  README.rst  check-sorting.sh  dev-requirements.txt  lint-requirements.txt  pyproject.toml  setup.cfg  setup.py  spellcheck-allowlist.txt  whitelist.py  whitelist.txt
.circleci/: config.yml
flake8_spellcheck/: __init__.py  django.txt  en_US.txt  pandas.txt  pytest.txt  python.txt  technical.txt  words.txt
src/flake8_spellcheck/: __init__.py  python.txt
tests/: test_flake8_spellcheck.py
