[build-system]
requires = ["setuptools >= 44", "wheel >= 0.30", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = "version.py"

[tool.isort]
line_length=99
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.setuptools_scm]
write_to = "flake8_spellcheck/version.py"
